a different way of preventing images from overflowing in greencloth. the last check-in made wiki pages look funny and put the scrollbar at the very bottom of the wiki---the new approach puts a scrollbar at the bottom of each oversized image.

--- a/public/stylesheets/wiki.css
+++ b/public/stylesheets/wiki.css
@@ -61,10 +61,6 @@ div.wiki > h1:first-child {
   margin-top: 0;
 }
 
-div.wiki {
-  overflow: auto
-}
-
 /** inline table formatting */
 
 .wiki table {
